2016-07-31  Natalia Portillo  <claunia@claunia.com>

	* File.cs: Code cleanup

2016-07-31  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs:
	* File.cs:
	* Super.cs:
	* Xattr.cs:
	* Consts.cs:
	* LisaFS.cs:
	* Structs.cs: Added support for subcatalogs.

2016-07-29  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Filesystems.csproj: Bump to version 3.1.0.

2016-07-29  Natalia Portillo  <claunia@claunia.com>

	* Filesystem.cs:
	* Dir.cs:
	* File.cs:
	* Super.cs:
	* Xattr.cs:
	* LisaFS.cs:
	* Consts.cs:
	* Extent.cs:
	* Structs.cs:
	* Encoding.cs: Added comments.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs:
	* File.cs:
	* Extent.cs:
	* Encoding.cs: Code re-styling.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* ODS.cs:
	* FFS.cs:
	* BFS.cs:
	* FAT.cs:
	* NTFS.cs:
	* APFS.cs:
	* HPFS.cs:
	* SysV.cs:
	* Opera.cs:
	* Acorn.cs:
	* BTRFS.cs:
	* extFS.cs:
	* ext2FS.cs:
	* ProDOS.cs:
	* MinixFS.cs:
	* Symbian.cs:
	* Structs.cs:
	* SolarFS.cs:
	* UNIXBFS.cs:
	* ISO9660.cs:
	* PCEngine.cs:
	* Nintendo.cs:
	* AppleMFS.cs:
	* AppleHFS.cs:
	* AmigaDOS.cs:
	* Dir.cs:
	* Filesystem.cs:
	* File.cs:
	* Info.cs:
	* Xattr.cs:
	* Super.cs:
	* AppleHFSPlus.cs:
	* LisaFS.cs:
	* Extent.cs:
	* Consts.cs:
	* Structs.cs:
	* Encoding.cs: Refactor and code cleanup.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* Encoding.cs: Solve null reference.

2016-02-10  Natalia Portillo  <claunia@claunia.com>

	* FFS.cs:
	  Added support for superblock offset in Atari UNIX.

	* SysV.cs:
	  Corrected big endian magic.

2016-02-05  Natalia Portillo  <claunia@claunia.com>

	* Acorn.cs:
	  Added exception catching and unsigned values to correct
	  Acorn DiscRecord structure. Fixes #34

2016-02-05  Natalia Portillo  <claunia@claunia.com>

	* Acorn.cs:
	* DiscImageChef.Filesystems.csproj:
	  Added support for Acorn ADFS.

	* FFS.cs:
	  Correct FFS information.

2016-02-05  Natalia Portillo  <claunia@claunia.com>

	* FAT.cs: